# VoiceTuber

./: .clang-format  .dir-locals.el  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  VoiceTuber.sln  VoiceTuber.vcxproj  VoiceTuber.vcxproj.filters  add-as-dialog.cpp  add-as-dialog.hpp  ai-mouth.cpp  ai-mouth.hpp  anim-sprite.cpp  anim-sprite.hpp  app.cpp  app.hpp  audio-capture.cpp  audio-capture.hpp  audio-in.cpp  audio-in.hpp  audio-input.cpp  audio-input.hpp  audio-level.cpp  audio-level.hpp  audio-out.cpp  audio-out.hpp  audio-output.cpp  audio-output.hpp  audio-sink.hpp  azure-stt.cpp  azure-stt.hpp  azure-token.cpp  azure-token.hpp  azure-tts.cpp  azure-tts.hpp  base-mouth.cpp  (+82 more)
.github/: FUNDING.yml
assets-raw/: bow2.xcf  donate.xcf  face-blink-anim.xcf  github.xcf  hair.xcf  splashscreen.xcf
assets/notepad_font/: README.md
coddle-repo/: libraries.toml
demo/: imgui.ini  prj.tpp
recipes/pocketsphinx/: conanfile.py  config.yml
recipes/pocketsphinx/all/: conandata.yml
src/: add-as-dialog.cpp  add-as-dialog.hpp  ai-mouth.cpp  ai-mouth.hpp  anim-sprite.cpp  anim-sprite.hpp  app.cpp  app.hpp  audio-in.cpp  audio-in.hpp  audio-level.cpp  audio-level.hpp  audio-out.cpp  audio-out.hpp  azure-stt.cpp  azure-stt.hpp  azure-token.cpp  azure-token.hpp  azure-tts.cpp  azure-tts.hpp  blink.cpp  blink.hpp  bouncer.cpp  bouncer.hpp  bouncer2.cpp  bouncer2.hpp  chat-v2.cpp  chat-v2.hpp  chat.cpp  chat.hpp  coddle.toml  dialog.cpp  dialog.hpp  eye-v2.cpp  eye-v2.hpp  eye.cpp  eye.hpp  file-open.cpp  file-open.hpp  file.cpp  (+58 more)
